<resources>
    <string name="app_name">Volunteers</string>
    <string name="menu_add_organization">Add Organization</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_open">Menu Open</string>
    <string name="avatar_place_holder">Avatar Place Holder</string>
    <string name="name">Name</string>
    <string name="residence">Residence</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="about">About</string>
    <string name="headquarters">Headquarters</string>
    <string name="description_hint">Description</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="organization_photo">organization photo</string>
    <string name="volunteering_photo">volunteering photo</string>
    <string name="joined_at">Joined at</string>
    <string name="updated_at">Updated at</string>
    <string name="param_lat">lat</string>
    <string name="param_lon">lon</string>
    <string name="param_title">title</string>
    <string name="param_organization_id">organizationId</string>
    <string name="show_on_map">Show on Map</string>
    <string name="activities">Activities</string>
    <string name="place">Place</string>
    <string name="category">Category</string>
    <string name="add_activity">Add Activity</string>
    <string name="created_at">Created At</string>
    <string-array name="categories_array">
        <item>Other</item>
        <item>Agricultural aid</item>
        <item>Basic Goods Distribution</item>
        <item>Home Renovation</item>
        <item>Shelter Renovation</item>
        <item>Animal Allies</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>