<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_weight="1"
    android:orientation="vertical"
    android:padding="@dimen/profile_tab_padding">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/username_LBL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/profile_label_margin"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="@dimen/profile_label_text"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_text_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/profile_label_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/residence_LBL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/profile_label_margin"
            android:text="@string/residence"
            android:textColor="@color/black"
            android:textSize="@dimen/profile_label_text"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/residence_text_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/profile_label_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/email_LBL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/profile_label_margin"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="@dimen/profile_label_text"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_text_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/profile_label_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/phone_LBL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/profile_label_margin"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textSize="@dimen/profile_label_text"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_text_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/profile_label_text" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_BTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />
</LinearLayout>